Nutget added to services

--- a/FastFoodApplication/FastFood.Service/FastFood.Service.csproj
+++ b/FastFoodApplication/FastFood.Service/FastFood.Service.csproj
@@ -6,4 +6,12 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FastFood.Models\FastFood.Models.csproj" />
+  </ItemGroup>
+
 </Project>
